# rust-chess

./: .env  Cargo.toml  README.md
migrations/: 20241231122019_create_accounts_table.up.sql  20250120184829_create_game_table.up.sql
src/: app.rs  chess.rs  handle_errors.rs  lib.rs  main.rs  routes.rs  store.rs  types.rs
src/routes/: authentication.rs  game_route.rs
src/types/: game.rs
